--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,6 @@ body {
   font-family: monospace;
   line-height: 10px;
   padding: 2px;
-  line-break: loose;
+  line-break: anywhere;
   word-break: break-all;
 }
