--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-html, body {
-  width: 100%;
-  height: 100%;
+* {
   padding: 0;
   margin: 0;
 }
 
+html, body {
+  width: 100vw;
+  max-height: 100dvh;
+  min-height: 100dvh;
+  background: linear-gradient(#12100E, #2B4162);
+
+}
+
 body {
+  position: relative;
   display: flex;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #video-container, #canvas-container {
@@ -24,6 +31,7 @@ body {
 }
 
 #video-container, #canvas {
+  display: none;
   visibility: hidden;
   position: absolute;
   top: -9999px
@@ -32,8 +40,6 @@ body {
 #text {
   position: absolute;
   width: 100%;
-  height: 100%;
-  background-color: black;
   color: white;
   font-size: 10px;
   font-family: monospace;
